--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,204 @@
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
 body {
+  font-size: 100%;
     text-align: center;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  font-family: 'Indie Flower', cursive;
+  font-size: 6em;
+  color: #FFFFFF;
+  padding: 0;
+  margin: 0;
+}
+
+.canvas-container {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: auto;
+  margin-top: -1em;
+}
+
+.players,
+.players-options {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  padding: 0;
+}
+
+.character-name {
+  font-family: 'Indie Flower', cursive;
+  color: #FFFFFF;
+  padding: 0;
+  margin-top: -2em;
+}
+
+.player-select {
+  display: block;
+  margin-top: -1em;
+  padding: 0 0.5em 0 0.5em;
+}
+
+.player-select:hover,
+.player-select:focus {
+  background-image: radial-gradient(#FFFFFF 0%, #000000 60%);
+  cursor: pointer;
+}
+
+.score-panel {
+  display: flex;
+  flex-wrap: : wrap;
+  justify-content: center;
+  position: absolute;
+  width: 505px;
+}
+
+.score {
+  font-family: 'Indie Flower', cursive;
+  font-size: 2em;
+  text-align: right;
+  color: #FFFFFF;
+  margin: 1.5em 0.5em 0 0;
+  width: 50%;
+  padding: 0;
+}
+
+.lives {
+  padding: 0;
+  margin: 3em 0 0 0.5em;
+  width: 50%;
+}
+
+.heart,
+.heart-lost {
+  display: flex;
+  flex-wrap: wrap;
+  float: left;
+  list-style: none;
+  padding: 0;
+  font-size: 2em;
+  color: #FFF;
+}
+
+.heart-lost {
+  opacity: 0.5;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content */
+.modal-content {
+    position:relative;
+    width: 27em;
+    margin: 18em auto;
+    padding: 0;
+    background-color: #fff;
+    border: 1px solid #888;
+    -webkit-border-radius: 1em;
+    border-radius: 1em;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+}
+
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+
+.close {
+    color: white;
+    float: right;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #2e3d49;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    font-size: 0.8em;
+    padding: 0 1em;
+    background: #cbcbcb;
+    -webkit-border-radius: 1em 1em 0 0;
+    border-radius: 1em 1em 0 0;
+    color: white;
+    cursor: default;
+}
+
+.modal-body {
+    display: block;
+    font-family: 'Indie Flower', cursive;
+    font-size: 1.5em;
+    padding: 0.5em;
+    cursor: default;
+}
+
+.play-again-btn{
+    display: block;
+    margin: auto;
+    font-family: 'Indie Flower', cursive;
+    font-size: 0.8em;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    cursor: pointer;
+    padding: 0.5em 1em;
+    border: none;
+    outline: none;
+    -webkit-border-radius: 2em;
+    border-radius: 2em;
+    color: rgba(255,255,255,0.9);
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    background: #4fb4f7;
+}
+
+.play-again-btn:hover {
+    background: #02ccba;
+    text-decoration: none;
 }
